# My_projects

./: .gitignore  README.md
CS50/Credit_card/: CMakeLists.txt  main  main.c
CS50/build-D-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  D  build.ninja  cmake_install.cmake  qtcsettings.cmake
Coursework/: F1.txt  F2.txt  F3.txt  F4.txt  ~$рсова_Кожухарь_ІПЗ111.docx  ~WRL0005.tmp  Курсова_Кожухарь_ІПЗ111.docx
Coursework/CoursworkMain/: CoursworkMain.cpp  CoursworkMain.sln  CoursworkMain.vcxproj  CoursworkMain.vcxproj.filters  F3.txt  F4.txt
Coursework/StaticLibForCourswork/: MyFunctions.h  StaticLibForCourswork.cpp  StaticLibForCourswork.sln  StaticLibForCourswork.vcxproj  StaticLibForCourswork.vcxproj.filters
MyChess3.0/: Board.h  MainForm.cpp  MyChess3.0.vcxproj  MyChess3.0.vcxproj.filters  MyForm.h  MyForm.resx  Pieces.h
MyChess3.0 Black ONLINE/: KingClass.h  MyChess3.0.vcxproj  MyChess3.0.vcxproj.filters  MyForm.h  PawnClass.h  Pieces.h  RookClass.h  Server.h
MyChess3.0 LOCAL/: BishopClass.h  Board.h  KnightClass.h  MyChess3.0.sln  MyChess3.0.vcxproj  MyChess3.0.vcxproj.filters  MyForm.h  PawnClass.h  QueenClass.h
MyChess3.0 White ONLINE/: MyChess3.0.vcxproj  MyForm.h  MyForm.resx  PawnClass.h  Server.h
Py/Lab 2/: Lab 2.pyproj  Lab 2.sln  Lab_2.py  Кожухарь_2_8.docx
Py/Lab3/: Lab3.py  (+3 more)
instaunlocker/: instaunlocker.py  instaunlocker.pyproj  instaunlocker.sln
stringtest/: F3.txt  stringtest.cpp  stringtest.sln  stringtest.vcxproj  stringtest.vcxproj.filters
Масиви/Lab17/17_1/: 17_1.cpp  17_1.h  CMakeLists.txt  main.cpp
(+166 files in other folders)
